// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlertBadge > snapshots > renders critical only correctly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="2 active alerts: 2 critical"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-critical/20 text-risk-critical font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-critical"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      <span>
        2
      </span>
    </span>
  </div>
</button>
`;

exports[`AlertBadge > snapshots > renders in open state 1`] = `
<button
  aria-expanded="true"
  aria-haspopup="dialog"
  aria-label="8 active alerts: 2 critical, 5 warning, 1 info"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg bg-nvidia-surface-light border-nvidia-green/50 px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-critical/20 text-risk-critical font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-critical"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      <span>
        2
      </span>
    </span>
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-medium/20 text-risk-medium font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span>
        5
      </span>
    </span>
  </div>
</button>
`;

exports[`AlertBadge > snapshots > renders info only correctly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="3 active alerts: 3 info"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-nvidia-blue/20 text-nvidia-blue font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-info"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span>
        3
      </span>
    </span>
  </div>
</button>
`;

exports[`AlertBadge > snapshots > renders mixed alerts correctly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="8 active alerts: 2 critical, 5 warning, 1 info"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-critical/20 text-risk-critical font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-critical"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      <span>
        2
      </span>
    </span>
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-medium/20 text-risk-medium font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span>
        5
      </span>
    </span>
  </div>
</button>
`;

exports[`AlertBadge > snapshots > renders no alerts correctly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="No active alerts"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-muted"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <span
    class="text-nvidia-text-muted"
    data-testid="alert-badge-empty"
  >
    No alerts
  </span>
</button>
`;

exports[`AlertBadge > snapshots > renders warning only correctly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="5 active alerts: 5 warning"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-medium/20 text-risk-medium font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span>
        5
      </span>
    </span>
  </div>
</button>
`;

exports[`AlertBadge > snapshots > renders with animation 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="2 active alerts: 2 critical"
  class="inline-flex items-center rounded-lg font-medium bg-nvidia-surface border border-nvidia-border text-nvidia-text-secondary transition-all duration-200 ease-in-out hover:bg-nvidia-surface-light hover:border-nvidia-border-light focus:outline-none focus:ring-2 focus:ring-nvidia-green/50 focus:ring-offset-2 focus:ring-offset-nvidia-bg motion-safe:animate-pulse-critical px-3 py-1.5 gap-2 text-sm"
  data-testid="alert-badge"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-bell w-4 h-4 text-nvidia-text-primary"
    data-testid="alert-badge-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.268 21a2 2 0 0 0 3.464 0"
    />
    <path
      d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
    />
  </svg>
  <div
    class="flex items-center gap-1.5"
    data-testid="alert-badge-counts"
  >
    <span
      class="inline-flex items-center justify-center gap-0.5 rounded-full px-1.5 bg-risk-critical/20 text-risk-critical font-semibold min-w-[1.25rem] h-5 text-xs"
      data-testid="alert-badge-critical"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      <span>
        2
      </span>
    </span>
  </div>
</button>
`;
